--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15-alpine
@@ -8,8 +6,9 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: todo_db
-    ports:
-      - "5439:5432"
+    # Puerto eliminado para mayor seguridad - solo accesible desde la red interna
+    # ports:
+    #   - "5439:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -18,7 +17,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - todo-network
+      - private-network
 
   backend:
     build:
@@ -27,14 +26,15 @@ services:
     container_name: todo_backend
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/todo_db
-    ports:
-      - "8010:8010"
+    # Puerto eliminado del host - solo accesible desde la red interna
+    # ports:
+    #   - "8010:8010"
     depends_on:
       db:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - todo-network
+      - private-network
 
   frontend:
     build:
@@ -44,16 +44,27 @@ services:
         - VITE_BASE_URL=${VITE_BASE_URL:-http://localhost:8010}
     container_name: todo-frontend
     ports:
-      - "3000:80"
+      - "3000:80"  # Único punto de entrada público
     depends_on:
       - backend
     restart: unless-stopped
     networks:
-      - todo-network
+      - private-network
 
 volumes:
   postgres_data:
 
 networks:
-  todo-network:
+  private-network:
+    name: private_net
     driver: bridge
+    internal: false  # Permite acceso a internet para los contenedores
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.20.0.0/16
+          gateway: 172.20.0.1
+    driver_opts:
+      com.docker.network.bridge.name: br-todo-private
+      com.docker.network.bridge.enable_icc: "true"  # Comunicación entre contenedores
+      com.docker.network.bridge.enable_ip_masquerade: "true"
