--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/todo_db
     # Puerto eliminado del host - solo accesible desde la red interna
-    # ports:
-    #   - "8010:8010"
+    ports:
+     - "8010:8010"
     depends_on:
       db:
         condition: service_healthy
@@ -50,6 +50,22 @@ services:
     restart: unless-stopped
     networks:
       - private-network
+      
+  nginx:
+    image: nginx:latest
+    container_name: todo_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+    networks:
+      - public-network
+      - private-network
+
 
 volumes:
   postgres_data:
@@ -68,3 +84,6 @@ networks:
       com.docker.network.bridge.name: br-todo-private
       com.docker.network.bridge.enable_icc: "true"  # Comunicación entre contenedores
       com.docker.network.bridge.enable_ip_masquerade: "true"
+  public-network:
+    name: public_net
+    driver: bridge  
